<resources>
    <string name="app_name">PDA Inventário</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="usuario_dois_pontos">Usuário:</string>
    <string name="modulo_dois_pontos">Módulo:</string>
    <string name="perfil_dois_pontos">Perfil:</string>
    <string name="versao">Versão: 1.0.5</string>
    <string name="powered">Powered by:</string>
    <string name="configuracoes">Configurações</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="voltar">Voltar</string>
    <string name="carregando">Carregando...</string>
    <string name="msg">Mensagem</string>
    <string name="campos_branco">Campos obrigatórios em branco</string>
    <string name="pref_configuracoes">configuracoes</string>
    <string name="pref_servidor">servidor</string>
    <string name="pref_diretorio">Diretório</string>
    <string name="pref_filial">Filial</string>
    <string name="preference_login_file">login</string>
    <string name="preference_login">login</string>
    <string name="preference_senha">senha</string>
    <string name="usuario_senha_padrao">12345678</string>
    <string name="preference_nome_usuario">nome</string>
    <string name="preference_cod_perfil">cod_perfil</string>
    <string name="preference_cod_usuario">cod_usuario</string>
    <string name="preference_cod_filial">cod_filial</string>
    <string name="preference_desc_perfil">desc_perfil</string>
    <string name="preference_nome_filial">nome_filial</string>
    <string name="usuario_invalido">Usuário inválido</string>
    <string name="falha_conexao">Falha na conexão</string>
    <string name="servidor">Servidor</string>
    <string name="filial">Filial</string>
    <string name="diretorio">Diretório virtual</string>
    <string name="autorizacao">Autorização</string>
    <string name="envio_pendentes">ENVIOS PENDENTES:</string>
    <string name="contagem">Contagem</string>
    <string name="enviar_contagem">Enviar contagem</string>
    <string name="recontagem">Recontagem</string>
    <string name="enviar_recontagem">Enviar recontagem</string>
    <string name="contagem_final">Sair</string>
    <string name="digite_autorizacao">Digite a autorização</string>
    <string name="principal">Principal</string>
    <string name="pref_autorizacao">autorizacao</string>
    <string name="bundle_id_inventario">idInventario</string>
    <string name="bundle_status_inventario">statusInventario</string>
    <string name="sucesso">Sucesso</string>
    <string name="bundle_file_zip">file_zip</string>
    <string name="estoque_n_importado">Estoque não importado na retaguarda.</string>
    <string name="importando_produto">Importando produto</string>
    <string name="importando_arquivos">Importando arquivos</string>
    <string name="gravando_usuarios">Arquivo -</string>
    <string name="erro_importacao">Erro importação produto</string>
    <string name="importando_enderecos">Importando endereços</string>
    <string name="importando_departamento">Importando departamento</string>
    <string name="importando_setor">Importando setor</string>
    <string name="inventario_fechado">O Inventário referente a esta Autorização está Fechado!</string>
    <string name="autorizacao_invalida_fora_data">Código de autorização invalido ou fora da data especificada!</string>
    <string name="departamento">Departamento</string>
    <string name="secao">Seção</string>
    <string name="grupo">Grupo</string>
    <string name="subgrupo">SubGrupo</string>
    <string name="ok">Ok</string>
    <string name="setor">Setor</string>
    <string name="subsecao">SubSeção</string>
    <string name="selecione">Selecione uma opção</string>
    <string name="digite_escaneie_endereco">Digite ou escaneie endereço</string>
    <string name="endereco">Endereço</string>
    <string name="zerar_pendencias">Zerar pend.</string>
    <string name="descricao">Descrição</string>
    <string name="adicionando_item">Adicionando item</string>
    <string name="arrow_left">left</string>
    <string name="arrow_right" />
    <string name="quantidade">Quantidade</string>
    <string name="frac">Fracionado</string>
    <string name="ean">EAN</string>
    <string name="sku">SKU</string>
    <string name="filtros">filtros</string>
    <string name="endereco_n_existe">Endereço não existe</string>
    <string name="ean_plu">EAN/PLU</string>
    <string name="fechar_endereco">Fechar End.</string>
    <string name="preference_inv">preference_inv</string>
    <string name="invEnderecoAberto">invEnderecoAberto</string>
    <string name="produto_n_cadastrado">Produto não cadastrado</string>
    <string name="codigo_e_endereco">O código digitado é um endereço. Feche o endereço atual antes de abrir o próximo!</string>
    <string name="produto">Produto</string>
    <string name="pendente">Pendente</string>
    <string name="coletado">Coletado</string>
    <string name="preference_id_endereco">preference_id_endereco</string>
    <string name="preference_inv_contagem">preference_inv_contagem</string>
    <string name="preference_inv_auditoria">preference_inv_auditoria</string>
    <string name="tipo_leitura">tipo_leitura</string>
    <string name="deseja_incluir_produto_nao_cadastrado">Deseja continuar ?</string>
    <string name="nao">Não</string>
    <string name="sim">Sim</string>
    <string name="n_cadastrado">NÃO CADASTRADO</string>
    <string name="substituir_item">Substituir item</string>
    <string name="salvo_com_sucesso">Salvo com sucesso!</string>
    <string name="problema_ao_salvar">Problema ao salvar item</string>
    <string name="bundle_file_name">bundle_file_name</string>
    <string name="local">LOCAL</string>
    <string name="finalizar_contagem">Finalizar</string>
    <string name="deseja_finalizar_contagem">Deseja finalizar contagem ?</string>
    <string name="deseja_zerar_produtos_pendentes">Deseja zerar produtos pendentes ?</string>
    <string name="zerar">Zerar</string>
    <string name="qtde">Qtd.</string>
    <string name="limpar_base">Limpar base</string>
    <string name="informe_o_produto">Informe o produto</string>
    <string name="preference_tipo_atividade">preference_tipo_atividade</string>
    <string name="preference_nome_secao">preference_nome_secao</string>
    <string name="va_para_aba_pendentes">Vá para aba pendente</string>
    <string name="para_substituir_deve_existir_contagem">Para substituir, deve - se adicionar o produto</string>
    <string name="preference_id_inventario">preference_id_inventario</string>
    <string name="endereco_fechado">Endereço fechado</string>
    <string name="enviado">Enviado</string>
    <string name="base_limpa">Base limpa</string>
    <string name="n_existe_pendenciq">Não existem pendências</string>
    <string name="existe_pendencias_na_contagem">Existe contagem pendente</string>
    <string name="decimal">Decimal</string>
    <string name="estoque_produtos_zerados">Produtos parametrizados com estoque zerado</string>
    <string name="preference_qtde_max_cont">preference_qtde_max_cont</string>
    <string name="quantidade_excedida">Quantidade excedida</string>
    <string name="ip_servidor">10.1.100.26</string>
    <string name="diretorio_name">ws</string>
    <string name="verificando_atualizacao">Verificando atualização...</string>
    <string name="nao_existe_divergencia">Não existe divergência</string>
    <string name="problema_autenticacao">Problema na autenticação</string>
    <string name="pda_inventario">PDA Inventário</string>


    <string-array name="array_coleta">
        <item>Produto</item>
        <item>Pendente</item>
        <!--<item>Coletado</item>-->
    </string-array>
</resources>
