<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editAutorizacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditText"
        android:hint="@string/digite_autorizacao"
        android:inputType="number">

        <requestFocus />
    </EditText>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btVoltar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            style="@style/ButtonColorWhite"
            android:text="@string/voltar"/>


        <Button
            android:id="@+id/btConfirmar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_weight=".5"
            style="@style/ButtonColorAccent"
            android:text="@string/confirmar"/>

    </LinearLayout>

    <Button
        android:id="@+id/btLimparBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/ButtonColorAccent"
        android:text="@string/limpar_base"/>

</LinearLayout>