<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_edittext"
    android:padding="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:ellipsize="end"
            android:text="@string/descricao"
            android:textAppearance="@style/TextAppearance.Small" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:ellipsize="end"
            android:text="@string/ean"
            android:textAppearance="@style/TextAppearance.Small" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:ellipsize="end"
            android:text="@string/sku"
            android:textAppearance="@style/TextAppearance.Small" />

        <TextView
            android:id="@+id/tvQtdeTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:ellipsize="end"
            android:visibility="gone"
            android:text="@string/qtde"
            android:textAppearance="@style/TextAppearance.Small" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>