<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight=".3"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.Large"
        android:text="@string/configuracoes"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_weight=".5"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack">

            <EditText
                android:id="@+id/etServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/servidor"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:textColorHint="@color/colorBlack"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etDiretorio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/diretorio"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack">

            <EditText
                android:id="@+id/etFilial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/filial"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_weight=".3">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="0dp"
            android:layout_weight=".5"
            style="@style/ButtonColorWhite"
            android:layout_height="wrap_content"
            android:text="@string/voltar" />

        <Button
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:id="@+id/btnOkConfig"
            style="@style/ButtonColorAccent"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:text="@string/confirmar"
            />
    </LinearLayout>

</LinearLayout>